--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "cloudinary": "^1.41.0",
+    "framer-motion": "^10.16.16",
     "next": "14.0.1",
     "next-cloudinary": "^5.2.0",
     "react": "^18",
