--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@vercel/analytics": "^1.1.1",
     "cloudinary": "^1.41.0",
     "flowbite": "^2.2.1",
     "framer-motion": "^10.16.16",
