refactor: added shadcnui for the table features

--- a/package.json
+++ b/package.json
@@ -17,16 +17,22 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@tanstack/react-table": "^8.15.3",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.10",
+    "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.0",
+    "clsx": "^2.1.0",
     "flowbite": "^2.2.1",
     "framer-motion": "^10.17.9",
+    "lucide-react": "^0.367.0",
     "next": "14.0.1",
     "next-cloudinary": "^5.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-photo-album": "^2.3.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-hero-patterns": "^0.1.2"
   },
   "devDependencies": {
