--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.15.3",
     "@vercel/analytics": "^1.1.1",
@@ -25,9 +27,8 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.0",
     "clsx": "^2.1.0",
-    "flowbite": "^2.2.1",
     "framer-motion": "^10.17.9",
-    "lucide-react": "^0.367.0",
+    "lucide-react": "^0.368.0",
     "next": "14.0.1",
     "next-cloudinary": "^5.2.0",
     "react": "^18",
