feat: added the base for a database to support for link changes and possible add new models in the future

--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "drizzle-kit generate:pg",
+    "studio": "drizzle-kit studio",
+    "migrate": "tsx db/migrate.ts"
   },
+  "type": "module",
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
     "@egjs/react-grid": "^1.15.2",
@@ -24,20 +28,26 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-table": "^8.15.3",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/postgres": "^0.8.0",
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.8",
     "framer-motion": "^10.17.9",
     "lucide-react": "^0.368.0",
     "next": "14.0.1",
     "next-cloudinary": "^5.2.0",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-photo-album": "^2.3.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-hero-patterns": "^0.1.2"
+    "tailwindcss-hero-patterns": "^0.1.2",
+    "tsx": "^4.7.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -45,6 +55,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.23",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8.4.31",
