--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-hero-patterns": "^0.1.2",
-    "tsx": "^4.7.2"
+    "tsx": "^4.7.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
