--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "migrate": "tsx db/migrate.ts"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.12",
+    "@clerk/nextjs": "^5.0.3",
     "@egjs/react-grid": "^1.15.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -36,7 +36,7 @@
     "drizzle-orm": "^0.30.8",
     "framer-motion": "^10.17.9",
     "lucide-react": "^0.368.0",
-    "next": "14.0.1",
+    "next": "^14.2.3",
     "next-cloudinary": "^5.2.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
